2012-11-07  Grzegorz Czajkowski  <g.czajkowski@samsung.com>

        WebKitTestRunner needs to turn on 'setContinuousSpellCheckingEnabled'
        https://bugs.webkit.org/show_bug.cgi?id=93611

        Reviewed by Gyuyoung Kim.

        WebKitTestRunner enables spelling feature to pass the layout tests from editing/spelling.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetStateToConsistentValues):
        Enables spelling by WebKit2 C API.

2012-11-07  Dominik Röttsches  <dominik.rottsches@intel.com>

        [EFL] Switch the efl-linux-slave-2 to Wk2 Release
        https://bugs.webkit.org/show_bug.cgi?id=101345

        Reviewed by Gyuyoung Kim.

        Switching efl-linux-slave-2 to Wk2 Release.

        * BuildSlaveSupport/build.webkit.org-config/config.json:

2012-11-07  Christophe Dumez  <christophe.dumez@intel.com>

        Add replaceWithLiteral() method to WTF::String
        https://bugs.webkit.org/show_bug.cgi?id=101257

        Reviewed by Benjamin Poulain.

        Add API tests for String::replaceWithLiteral() and corresponding
        StringImpl methods.

        * TestWebKitAPI/CMakeLists.txt: Add WTFString API tests to CMake.
        * TestWebKitAPI/Tests/WTF/StringImpl.cpp:
        (TestWebKitAPI::TEST):
        (TestWebKitAPI):
        * TestWebKitAPI/Tests/WTF/WTFString.cpp:
        (TestWebKitAPI::TEST):

2012-11-07  Oswald Buddenhagen <oswald.buddenhagen@nokia.com>

        [Qt] Fix build of modules depending on QtWebKit when using prefix
        https://bugs.webkit.org/show_bug.cgi?id=101437

        Reviewed by Simon Hausmann.

        Remove setting of MODULE_QMAKE_OUTDIR from here, it's been moved to .qmake.conf.

        * qmake/mkspecs/features/default_pre.prf:

2012-11-06  Dan Beam  <dbeam@chromium.org>

        Enable REQUEST_AUTOCOMPLETE for chromium port
        https://bugs.webkit.org/show_bug.cgi?id=101376

        Reviewed by Adam Barth.
